# Life_logger

./: .gitignore  CMakeLists.txt  MOSA_MIC_PROJ.ino  PROJECT.md  README.md  analyze_ab.py  mic_test.py  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.seeed_xiao_esp32s3  wav_recorder.py
.claude/: settings.local.json
docs/: PDS.md  WPS.md
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/audio/: audio_buffer.cpp  coherence_filter.cpp  post_processor.cpp  post_processor.h  vad.cpp
main/config/: cal_store.h  device_config.h
main/hal/: serial_io.cpp  serial_io.h
src/: CMakeLists.txt  idf_component.yml  main.cpp
src/audio/: audio_buffer.h  coherence_filter.h  vad.h
src/config/: cal_store.cpp
